# logs_ativ

./: commands_dictionary.py  main.ipynb  main2.ipynb  pyproject.toml
